--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        jdbc.time_zone: UTC
   flyway:
     enabled: true
     locations: classpath:db/migration
@@ -25,3 +26,22 @@ management:
   endpoint:
     health:
       show-details: always
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+  paths-to-match: /api/**         # solo documenta rutas de la API
+  override-with-generic-response: false  # ← evita el 500 con ControllerAdvice
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  cache:
+    disabled: true
+
+logging:
+  level:
+    org.springdoc: DEBUG
+    com.sergiom.minicorebank: INFO
